# Reels-KnowledgeBase-Creator

./: .env.example  .gitignore  README.md  config.example.yaml  instagram-reels-scraper-design.md  instagram-reels-scraper-requirements.md  instagram-reels-scraper-tasks.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_single_reel.py
src/reels_scraper/: __init__.py  config.py  logger.py  models.py  progress.py
src/reels_scraper/builder/: __init__.py  builder.py
src/reels_scraper/cli/: __init__.py  main.py
src/reels_scraper/downloader/: __init__.py  downloader.py
src/reels_scraper/processor/: __init__.py  ai_enhancer.py  markdown_generator.py  processor.py
src/reels_scraper/processor/templates/: default.md.j2
src/reels_scraper/scraper/: __init__.py  rate_limiter.py  scraper.py  session_manager.py
src/reels_scraper/transcription/: __init__.py  audio_extractor.py  engine.py  local_whisper.py  whisper_service.py
